--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,21 +1,27 @@
 ---
 all:
+  vars:
+    ansible_python_interpreter = /usr/bin/python3
+    ansible_user = user
+    ansible_ssh_private_key_file = ../id_rsa
   hosts:
   children:
     app:
       hosts:
         vm2:
-          ansible_host: 51.250.12.210 
+          ansible_host: 192.168.15.29
         vm3:
-          ansible_host: 51.250.68.244 
+          ansible_host: 192.168.15.26
     web:
       hosts:
         vm1:
-          ansible_host: 130.193.39.32 
+          ansible_host: 192.168.15.14
     database:
       vars:
         pg_ver: 14
         pg_data: /data/pgsql
       hosts:
         vm1:
-          ansible_host: 130.193.39.32 
+          ansible_host: 192.168.15.14
+
+ 
