modified:   ../ansible/ansible.cfg 	modified:   ../ansible/inventory/hosts.yml

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,6 @@
 
 [defaults]
 interpreter_python = auto_silent
-inventory      = ansible/inventory/hosts.yml
+inventory      = inventory/hosts.yml
 host_key_checking = false
 
