--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -2,26 +2,26 @@
 all:
   vars:
     ansible_python_interpreter = /usr/bin/python3
-    ansible_user = user
-    ansible_ssh_private_key_file = ../id_rsa
+    ansible_user = ubuntu
+    ansible_ssh_private_key_file = ~/.ssh/id_rsa
   hosts:
   children:
     app:
       hosts:
         vm2:
-          ansible_host: 192.168.15.24
+          ansible_host: 192.168.15.22
         vm3:
-          ansible_host: 192.168.15.32
+          ansible_host: 192.168.15.23
     web:
       hosts:
         vm1:
-          ansible_host: 192.168.15.17
+          ansible_host: 192.168.15.30
     database:
       vars:
         pg_ver: 14
         pg_data: /data/pgsql
       hosts:
         vm1:
-          ansible_host: 192.168.15.17
+          ansible_host: 192.168.15.30
 
  
