--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -12,6 +12,7 @@ all:
           ansible_host: 192.168.15.32
         vm3:
           ansible_host: 192.168.15.16
+          ansible_user = cloud-user
     web:
       hosts:
         vm1:
