--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 terraform/.terraform
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
+terraform.tfstate
 terraform/terraform.tfstate.backup
 key.json
 meta.txt
