--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -9,20 +9,21 @@ all:
     app:
       hosts:
         vm2:
-          ansible_host: 192.168.15.32
+          ansible_host: 192.168.15.6
         vm3:
-          ansible_host: 192.168.15.16
-          ansible_user = cloud-user
+          ansible_host: 192.168.15.10
+          ansible_user: cloud-user
+          
     web:
       hosts:
         vm1:
-          ansible_host: 192.168.15.24
+          ansible_host: 192.168.15.13
     database:
       vars:
         pg_ver: 14
         pg_data: /data/pgsql
       hosts:
         vm1:
-          ansible_host: 192.168.15.24
+          ansible_host: 192.168.15.13
 
  
