--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -2,28 +2,27 @@
 all:
   vars:
     ansible_python_interpreter = /usr/bin/python3
-    ansible_user = ubuntu
+    ansible_user = user
     ansible_ssh_private_key_file = ~/.ssh/id_rsa
   hosts:
   children:
     app:
       hosts:
         vm2:
-          ansible_host: 192.168.15.6
+          ansible_host: 192.168.15.15
         vm3:
-          ansible_host: 192.168.15.10
-          ansible_user: cloud-user
+          ansible_host: 192.168.15.32
           
     web:
       hosts:
         vm1:
-          ansible_host: 192.168.15.13
+          ansible_host: 192.168.15.10
     database:
       vars:
         pg_ver: 14
         pg_data: /data/pgsql
       hosts:
         vm1:
-          ansible_host: 192.168.15.13
+          ansible_host: 192.168.15.10
 
  
