--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -70,6 +70,7 @@
       - "postgresql-client-{{ pg_ver }}"
 
   - name: "Create {{ pg_data }} Directory"
+    become: true
     file:
       path: "{{ pg_data }}"
       state: directory
