modified:   ansible/inventory/hosts.yml         modified:   ansible/vars.yml         deleted:    meta.yml         modified:   readme.md

--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -9,17 +9,20 @@ all:
     app:
       hosts:
         vm2:
-          ansible_host: 192.168.15.29
+          ansible_host: 192.168.15.6
         vm3:
-          ansible_host: 192.168.15.24
+          ansible_host: 192.168.15.9
           
     web:
+      vars:
+        pg_ver: 14
+        pg_data: /data/pgsql
       hosts:
         vm1:
-          ansible_host: 192.168.15.12
+          ansible_host: 192.168.15.3
     database:
       hosts:
         vm1:
-          ansible_host: 192.168.15.12
+          ansible_host: 192.168.15.3
 
  
